# company-structure-visualiser

./: .env.example  .env.local  .gitignore  ADRs.md  GEMINI.md  PROJECT_LAYOUT.md  README.md  app.py  bootstrap.sh  docker-compose.yml  fetch_js.sh  pyproject.toml  repomix.config.json5  repomix.sh  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
api/: analyze.py  config.py  llm_client.py  llm_interface.py  logging.py  middleware.py  models.py  router.py
backend/: .env.local  app.py  pyproject.toml  run.sh  test_endpoints.http
backend/api/: analyze.py
backend/core/: config.py  llm_client.py
backend/explore/: companies_house.py  download_data.py
backend/scripts/: rebuild_db.py  run.sh
backend/src/: app.py  config.py
backend/src/api/: config.py  dependencies.py  errors.py  llm_client.py  llm_interface.py  logging.py  middleware.py  models.py  prompts.py
backend/src/api/routers/: companies.py  llm.py
backend/src/companies_duck_house/: __init__.py  core.py  models.py  router.py
backend/src/company_structure_api/: __init__.py  app.py  main.py
backend/src/sample_data/: sample company ownership.xlsx
backend/templates/: index.html
backend/tests/: companies_house_sample_data.csv  test_api.py  test_app.py  test_companies_duck_house.py
core/: llm_client.py
demo/: sample_agents.json
e2e/: package.json  playwright.config.ts
e2e/test-results/: .last-run.json
e2e/test-results/tests-upload-Company-Visua-f7794-d-a-file-and-render-a-graph/: error-context.md
e2e/tests/: happy-path.spec.ts  upload.spec.js
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  repomix-output.xml  tailwind.config.js  vite.config.js  vite.config.ts
frontend/sample-data/: complex.xlsx  example.xlsx  invalid-loop.xlsx
frontend/src/: App.vue  db.js  index.css  logging.js  main.js  main.ts  types.d.ts
frontend/src/api/: client.ts  index.ts  schema.d.ts
frontend/src/assets/: main.css
frontend/src/components/: Address.vue  AppHeader.vue  Breadcrumbs.vue  CompanyChart.vue  CompanyGraph.vue  CompanyMatchTag.vue  CountryFlag.vue  EditSearchResult.vue  EntityNode.vue  Error.vue  FileUpload.vue  Graph.vue  Loading.vue  MatchConfidence.vue  Reset.vue  SearchConfirmation.vue  parse.spec.ts  parse.ts
frontend/src/composables/: parse.spec.ts  parse.ts  useLayout.ts  useParse.spec.ts  useParse.ts
frontend/src/stores/: app.ts  company.ts  graph.ts  search.ts
frontend/static/js/: agents-view.js  agents.js  analysis-detail-view.js  analysis-runs-view.js  analysis-runs.js  components.js  db.js  docs-view.js  docs.js  home-view.js  logger.js  main.js  results-view.js  results.js  sets-view.js  sets.js  settings-view.js
frontend/static/libs/: pdf.mjs  vue.global.js  vue.js
sample_docs/: recipe1.txt  recipe2.txt
src/: config.py
src/api/: dependencies.py  errors.py  llm_client.py  llm_interface.py
src/api/routers/: llm.py
src/companies_duck_house/: core.py
src/company_structure_api/: __init__.py  __main__.py  app.py  companies_api_router.py  company_visualizer.py  config.py  db.py  models.py  swagger.py
static/js/: App.js  agents-view.js  db.js  logging.js  main.js  results-view.js
static/js/components/: AppHeader.js  PdfSidebar.js  PdfViewer.js
static/libs/: mammoth.browser.min.js
templates/: index.html
tests/: test_api.py  test_app.py  test_companies_duck_house.py
ui/: eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
ui/sample-data/: example.xlsx  example2.xlsx
ui/src/: App.vue  config.ts  govuk.scss  main.css  main.ts  router.ts  types.d.ts  vue-extra.ts
ui/src/api/: client.ts  index.ts  models.ts  schema.d.ts  useApi.ts
ui/src/components/: Address.vue  CompanySearch.vue  CompanySearchResults.vue  EditSearchResult.vue  EntityNode.vue  Error.vue  FileUpload.vue  Graph.vue  GroupStructureTable.vue  LoadingSpinner.vue  MatchConfidence.vue  ModalOverlay.vue  SearchConfirmation.vue  VisualizationStatusTag.vue
ui/src/components/govuk/: Breadcrumbs.vue  Button.vue  Card.vue  Checkbox.vue  Checkboxes.vue  CheckboxesInjectionKeys.ts  Container.vue  Details.vue  ErrorMessage.vue  ErrorSummary.vue  Fieldset.vue  FileUpload.vue  Footer.vue  Fragment.vue  Header.vue  Input.vue  NumberedStep.vue  NumberedSteps.vue  Pagination.vue  Panel.vue  Select.vue  ShowHideLink.vue  SummaryListItem.vue  Tabs.vue  Tag.vue  Textarea.vue  WarningText.vue
ui/src/components/visualization/: ColorSelect.vue  Controls.vue  EntityNode.vue  Graph.vue  HighlightLegend.vue  HighlightRulesModal.vue  SearchModal.vue  useLayout.ts  useScreenshot.ts
ui/src/composables/: export.spec.ts  export.ts  parse.spec.ts  parse.ts  useComputedId.ts  useLayout.ts
ui/src/db/: graph.ts  models.ts  useDb.ts  useVisualization.ts
ui/src/routes/: Home.vue  Match.vue  Upload.vue  Validate.vue  Visualization.vue  Visualize.vue
ui/src/stores/: app.ts
