[project]
name = "company_structure_api"
version = "0.1.0"
description = "A Python package to download UK Companies House data into a searchable DuckDB database with FTS."
requires-python = ">=3.14"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "duckdb==1.4.3",
    "rich>=14.3.2", # For nice progress bars during download
    "duckdb-extension-fts==1.4.3",
    "httpx>=0.28.1",
    "fastapi>=0.128.7",
    "jinja2>=3.1.6",
    "openai>=2.20.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
company_structure_api = "company_structure_api:main"

[project.urls]
Homepage = "https://github.com/your-username/companies-house-db"

[tool.pytest.ini_options]
# Register the 'manual' marker to avoid warnings and add a description.
pythonpath = [
  "src"
]
markers = [
    "manual: marks a test as manual to run on demand (skipped by default)",
]
# Add a default option to exclude tests marked as 'manual'.
addopts = "-m 'not manual'"

[dependency-groups]
dev = [
    "trio>=0.27.0",
    "pytest-trio>=0.8.0",
    "requests>=2.28.0",
    "pytest-mock>=3.14.0",
    "rsconnect-python>=1.27.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
