[project]
name = "company_structure_api"
version = "0.1.0"
description = "A Python package to download UK Companies House data into a searchable DuckDB database with FTS."
authors = [
    { name = "Your Name", email = "your@email.com" },
]
requires-python = ">=3.13"
dependencies = [
    "duckdb==1.5.0",
    "duckdb-extension-fts==1.5.0",
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
    "pyarrow>=23.0.1",
]

[project.scripts]
company_structure_api = "company_structure_api:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.1",
    "rsconnect-python>=1.28.2",
]

